k8s/local/be/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: be-service
  namespace: blog
  labels:
    app: be
spec:
  selector:
    app: be
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
