k8s/local/be/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  namespace: blog
  labels:
    app: be
spec:
  ingressClassName: nginx
  rules:
    - host: be.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-service
                port:
                  number: 8080
